# iQcoin

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac
contrib/: README.md  iQcoin-qt.pro  iQcoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  iQcoin-qt.desktop.desktop  iQcoin-qt.install  iQcoin-qt.lintian-overrides  iQcoin-qt.protocol  iQcoind.bash-completion  iQcoind.examples  iQcoind.install  iQcoind.lintian-overrides  iQcoind.manpages  rules  watch
contrib/debian/examples/: iQcoin.conf
contrib/debian/manpages/: iQcoin-qt.1  iQcoin.conf.5  iQcoind.1
contrib/devtools/: README.md
contrib/gitian-descriptors/: README.md  deps-win32.yml  gitian-win32.yml  gitian.yml  qt-win32.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  unit-tests.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-iQcoind-for-test.sh.in
qa/rpc-tests/: util.sh  wallet.sh
share/: setup.nsi.in  ui.rc
share/certs/: PrivateKeyNotes.md  iQcoinFoundation_Comodo_Cert.pem
share/pixmaps/: iQcoin128.xpm  iQcoin16.xpm  iQcoin256.xpm  iQcoin32.xpm  iQcoin64.xpm
share/qt/: Info.plist.in  clean_mac_info_plist.py  extract_strings_qt.py  make_windows_icon.sh
src/: .gitignore  Makefile.am  Makefile.include  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  iQcoin-cli-res.rc  iQcoin-cli.cpp  iQcoind-res.rc  iQcoind.cpp  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  (+47 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: iQcoin_qt.m4
src/qt/: Makefile.am  aboutdialog.cpp  aboutdialog.h  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  iQcoin.cpp  iQcoin.qrc  iQcoinaddressvalidator.cpp  iQcoinaddressvalidator.h  iQcoinamountfield.cpp  iQcoinamountfield.h  iQcoingui.cpp  iQcoingui.h  iQcoinstrings.cpp  iQcoinunits.cpp  iQcoinunits.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  (+58 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: iQcoin_ach.ts  iQcoin_af_ZA.ts  iQcoin_ar.ts  iQcoin_be_BY.ts  iQcoin_bg.ts  iQcoin_bs.ts  iQcoin_ca.ts  iQcoin_ca_ES.ts  iQcoin_cs.ts  iQcoin_cy.ts  iQcoin_da.ts  iQcoin_de.ts  iQcoin_de_AT.ts  iQcoin_el_GR.ts  iQcoin_en.ts  iQcoin_eo.ts  iQcoin_es.ts  iQcoin_es_CL.ts  iQcoin_es_MX.ts  iQcoin_et.ts  iQcoin_eu_ES.ts  iQcoin_fa.ts  iQcoin_fa_IR.ts  iQcoin_fi.ts  iQcoin_fr.ts  iQcoin_fr_CA.ts  iQcoin_gl.ts  iQcoin_gu_IN.ts  iQcoin_he.ts  iQcoin_hi_IN.ts  iQcoin_hr.ts  iQcoin_hu.ts  iQcoin_id_ID.ts  iQcoin_it.ts  iQcoin_ja.ts  iQcoin_kk_KZ.ts  iQcoin_ko_KR.ts  iQcoin_la.ts  iQcoin_lt.ts  iQcoin_lv_LV.ts  (+21 more)
src/qt/res/: iQcoin-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_iQcoin.cpp  util_tests.cpp  wallet_tests.cpp
